tests/rosetta/out/Fortran/angles-geometric-normalization-and-conversion.error
gfortran: exit status 1
/tmp/angles-geometric-normalization-and-conversion.f90:119:22:

  119 |       write(s2,'(G0)') d2d(a)
      |                      1
Error: Type mismatch in argument ‘d’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:120:22:

  120 |       write(s3,'(G0)') d2g(a)
      |                      1
Error: Type mismatch in argument ‘d’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:121:22:

  121 |       write(s4,'(G0)') d2m(a)
      |                      1
Error: Type mismatch in argument ‘d’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:122:22:

  122 |       write(s5,'(G0)') d2r(a)
      |                      1
Error: Type mismatch in argument ‘d’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:129:22:

  129 |       write(s8,'(G0)') g2g(a)
      |                      1
Error: Type mismatch in argument ‘g’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:130:22:

  130 |       write(s9,'(G0)') g2d(a)
      |                      1
Error: Type mismatch in argument ‘g’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:131:23:

  131 |       write(s10,'(G0)') g2m(a)
      |                       1
Error: Type mismatch in argument ‘g’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:132:23:

  132 |       write(s11,'(G0)') g2r(a)
      |                       1
Error: Type mismatch in argument ‘g’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:139:23:

  139 |       write(s14,'(G0)') m2m(a)
      |                       1
Error: Type mismatch in argument ‘m’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:140:23:

  140 |       write(s15,'(G0)') m2d(a)
      |                       1
Error: Type mismatch in argument ‘m’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:141:23:

  141 |       write(s16,'(G0)') m2g(a)
      |                       1
Error: Type mismatch in argument ‘m’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:142:23:

  142 |       write(s17,'(G0)') m2r(a)
      |                       1
Error: Type mismatch in argument ‘m’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:149:23:

  149 |       write(s20,'(G0)') r2r(a)
      |                       1
Error: Type mismatch in argument ‘r’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:150:23:

  150 |       write(s21,'(G0)') r2d(a)
      |                       1
Error: Type mismatch in argument ‘r’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:151:23:

  151 |       write(s22,'(G0)') r2g(a)
      |                       1
Error: Type mismatch in argument ‘r’ at (1); passed INTEGER(4) to REAL(4)
/tmp/angles-geometric-normalization-and-conversion.f90:152:23:

  152 |       write(s23,'(G0)') r2m(a)
      |                       1
Error: Type mismatch in argument ‘r’ at (1); passed INTEGER(4) to REAL(4)
