tests/rosetta/out/Fortran/angles-geometric-normalization-and-conversion.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program angles_geometric_normalization_and_conversion
  implicit none
    integer, dimension(12) :: angles
    integer :: a
    integer :: i0
      character(len=100) :: s1
      character(len=100) :: s2
      character(len=100) :: s3
      character(len=100) :: s4
      character(len=100) :: s5
    integer :: i6
      character(len=100) :: s7
      character(len=100) :: s8
      character(len=100) :: s9
      character(len=100) :: s10
      character(len=100) :: s11
    integer :: i12
      character(len=100) :: s13
      character(len=100) :: s14
      character(len=100) :: s15
      character(len=100) :: s16
      character(len=100) :: s17
    integer :: i18
      character(len=100) :: s19
      character(len=100) :: s20
      character(len=100) :: s21
      character(len=100) :: s22
      character(len=100) :: s23
  call main()
  contains
  recursive real function d2d(d) result(res)
    real, intent(in) :: d
    res = mod(d,360)
    return
  end function d2d
  recursive real function g2g(g) result(res)
    real, intent(in) :: g
    res = mod(g,400)
    return
  end function g2g
  recursive real function m2m(m) result(res)
    real, intent(in) :: m
    res = mod(m,6400)
    return
  end function m2m
  recursive real function r2r(r) result(res)
    real, intent(in) :: r
    res = mod(r,((2 * 3.141592653589793)))
    return
  end function r2r
  recursive real function d2g(d) result(res)
    real, intent(in) :: d
    res = ((d2d(d) * 400) / 360)
    return
  end function d2g
  recursive real function d2m(d) result(res)
    real, intent(in) :: d
    res = ((d2d(d) * 6400) / 360)
    return
  end function d2m
  recursive real function d2r(d) result(res)
    real, intent(in) :: d
    res = ((d2d(d) * 3.141592653589793) / 180)
    return
  end function d2r
  recursive real function g2d(g) result(res)
    real, intent(in) :: g
    res = ((g2g(g) * 360) / 400)
    return
  end function g2d
  recursive real function g2m(g) result(res)
    real, intent(in) :: g
    res = ((g2g(g) * 6400) / 400)
    return
  end function g2m
  recursive real function g2r(g) result(res)
    real, intent(in) :: g
    res = ((g2g(g) * 3.141592653589793) / 200)
    return
  end function g2r
  recursive real function m2d(m) result(res)
    real, intent(in) :: m
    res = ((m2m(m) * 360) / 6400)
    return
  end function m2d
  recursive real function m2g(m) result(res)
    real, intent(in) :: m
    res = ((m2m(m) * 400) / 6400)
    return
  end function m2g
  recursive real function m2r(m) result(res)
    real, intent(in) :: m
    res = ((m2m(m) * 3.141592653589793) / 3200)
    return
  end function m2r
  recursive real function r2d(r) result(res)
    real, intent(in) :: r
    res = ((r2r(r) * 180) / 3.141592653589793)
    return
  end function r2d
  recursive real function r2g(r) result(res)
    real, intent(in) :: r
    res = ((r2r(r) * 200) / 3.141592653589793)
    return
  end function r2g
  recursive real function r2m(r) result(res)
    real, intent(in) :: r
    res = ((r2r(r) * 3200) / 3.141592653589793)
    return
  end function r2m
  recursive subroutine main()
    angles = (/-2,-1,0,1,2,6.2831853,16,57.2957795,359,399,6399,1e+06/)
    print *, 'degrees normalized_degs gradians mils radians'
    do i0 = 1, size(angles)
      a = angles(i0)
      write(s1,'(G0)') a
      write(s2,'(G0)') d2d(a)
      write(s3,'(G0)') d2g(a)
      write(s4,'(G0)') d2m(a)
      write(s5,'(G0)') d2r(a)
      print *, trim(trim(trim(trim(trim(trim(trim(s1 // ' ') // s2) // ' ') // s3) // ' ') // s4) // ' ') // s5
    end do
    print *, ''//char(10)//'gradians normalized_grds degrees mils radians'
    do i6 = 1, size(angles)
      a = angles(i6)
      write(s7,'(G0)') a
      write(s8,'(G0)') g2g(a)
      write(s9,'(G0)') g2d(a)
      write(s10,'(G0)') g2m(a)
      write(s11,'(G0)') g2r(a)
      print *, trim(trim(trim(trim(trim(trim(trim(s7 // ' ') // s8) // ' ') // s9) // ' ') // s10) // ' ') // s11
    end do
    print *, ''//char(10)//'mils normalized_mils degrees gradians radians'
    do i12 = 1, size(angles)
      a = angles(i12)
      write(s13,'(G0)') a
      write(s14,'(G0)') m2m(a)
      write(s15,'(G0)') m2d(a)
      write(s16,'(G0)') m2g(a)
      write(s17,'(G0)') m2r(a)
      print *, trim(trim(trim(trim(trim(trim(trim(s13 // ' ') // s14) // ' ') // s15) // ' ') // s16) // ' ') // s17
    end do
    print *, ''//char(10)//'radians normalized_rads degrees gradians mils'
    do i18 = 1, size(angles)
      a = angles(i18)
      write(s19,'(G0)') a
      write(s20,'(G0)') r2r(a)
      write(s21,'(G0)') r2d(a)
      write(s22,'(G0)') r2g(a)
      write(s23,'(G0)') r2m(a)
      print *, trim(trim(trim(trim(trim(trim(trim(s19 // ' ') // s20) // ' ') // s21) // ' ') // s22) // ' ') // s23
    end do
  end subroutine main
end program angles_geometric_normalization_and_conversion
